--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,19 @@ footer {
 }
 
 .subtitulo a {
-  font-size: 15px;
+  font-size: 1rem;
   background: white;
   place-self: center;
   padding: 8% 17%;
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
+  border: 2px solid transparent;
+  transition: border-color 0.2s;
+}
+
+.subtitulo a:hover {
+  border-color: red;
 }
 
 .parte1 {
@@ -51,7 +57,8 @@ footer {
 
 .parte1 img {
   max-width: 100%;
-  cursor: pointer;
+  max-height: 100%;
+  /* cursor: pointer; */
 }
 
 .parte2 {
@@ -62,25 +69,57 @@ footer {
 
 .titulinhos {
   background: white;
-  padding: 8% 0%;
+  padding: 8% 8%;
 }
 
-.parte2 h1 {
-  font-size: 64px;
+.vantagenstxt h1 {
+  font-size: 4rem;
   align-self: center;
   text-align: end;
   color: #c6c6c6;
   margin-right: 20px;
+  position: absolute;
+}
+.vantagenstxt {
+  font-size: 1rem;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  color: #c6c6c6;
+  padding: 2% 0%;
+  position: relative;
 }
 
+.onda {
+  background-image: url("/img/onda.svg");
+  background-repeat: repeat;
+  background-position: center;
+  background-size: contain;
+  height: 200px;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  /* background-color: blue; */
+}
 .spec {
   padding: 5% 15%;
+  padding-left: 0px;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 20px;
 }
 .spec h2 {
   margin-bottom: 10px;
+}
+li:nth-child(odd) {
+  background: #c6c6c6;
+}
+li {
+  border-left: 4px solid transparent;
+  transition: border-color 0.2s;
+}
+li:hover {
+  border-color: #900;
 }
 .texto1 {
   display: grid;
@@ -101,15 +140,19 @@ footer {
   border-radius: 20px 20px 0px 0px;
 }
 
-a.botao {
+.botao {
   background: red;
   padding: 11px 22px;
   border-radius: 5px;
   color: white;
 }
+.botao:hover {
+  background: #900;
+  transition: 0.2s;
+}
 
 p.texto {
-  font-size: 20px;
+  font-size: 1.1rem;
 }
 
 .img-risco {
@@ -125,4 +168,9 @@ p.texto {
   position: absolute;
   left: -30px;
   top: 30px;
+}
+
+ol {
+  list-style: none;
+  padding-left: 0px;
 }
