--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ footer {
   margin-bottom: 10px;
 }
 li:nth-child(odd) {
-  background: #c6c6c6;
+  background: #f7f7f7;
 }
 li {
   border-left: 4px solid transparent;
