--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ footer {
 }
 
 .onda {
-  background-image: url("img/onda.svg");
+  background-image: url("./img/onda.svg");
   background-repeat: repeat;
   background-position: center;
   background-size: contain;
