--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,9 @@ footer {
 
 .subtitulo {
   display: grid;
-  grid-template-columns: repeat(4, 130px);
+  grid-template-columns: repeat(auto-fit, minmax(150px, auto));
   justify-content: center;
+  gap: 20px;
 }
 
 .subtitulo a {
@@ -56,8 +57,9 @@ footer {
 }
 
 .parte1 img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   /* cursor: pointer; */
 }
 
@@ -79,6 +81,18 @@ footer {
   color: #c6c6c6;
   margin-right: 20px;
   position: absolute;
+  word-break: break-word;
+  background-image: url("../img/onda.svg");
+  background-repeat: repeat;
+  background-position: center;
+  background-size: contain;
+  /* height: 300px; */
+  /* min-height: 30%; */
+  /* width: 100%; */
+  position: absolute;
+  /* z-index: -1; */
+  /* object-fit: cover; */
+  /* background-color: blue; */
 }
 .vantagenstxt {
   font-size: 1rem;
@@ -90,17 +104,6 @@ footer {
   position: relative;
 }
 
-.onda {
-  background-image: url("../img/onda.svg");
-  background-repeat: repeat;
-  background-position: center;
-  background-size: contain;
-  height: 200px;
-  width: 100%;
-  position: absolute;
-  z-index: -1;
-  /* background-color: blue; */
-}
 .spec {
   padding: 5% 15%;
   padding-left: 0px;
@@ -128,6 +131,7 @@ li:hover {
   justify-items: end;
   gap: 20px;
   padding: 0px 36px;
+  padding-right: 10px;
 }
 
 a {
