--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,8 @@ footer {
 }
 .vantagenstxt {
   font-size: 1rem;
-  display: grid;
+  display: flex;
+  /* grid-template-columns: 1fr; */
   justify-items: center;
   align-items: center;
   color: #c6c6c6;
@@ -215,8 +216,18 @@ ol {
   .parte2 h1 {
     text-align: center;
     font-size: 3rem;
-    margin-top: 20px;
+    margin-right: 0px;
   }
+
+  .vantagenstxt {
+    place-content: center;
+  }
+
+  .vantagenstxt h1 {
+    /* margin-top: 20px; */
+    padding: 20px 0px;
+  }
+
   .img-risco::after {
     display: none;
   }
